[gd_scene load_steps=3 format=3 uid="uid://c2ak6h4w7axdo"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_y1pkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_axuph"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1pkf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -50.5
offset_right = 41.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "KANJI DRILL"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxEmpty_axuph")

[node name="QuizButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 36
text = "START QUIZ"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "QUIT"

[node name="SetupPanel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderMargin" type="MarginContainer" parent="SetupPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HeaderHBox" type="HBoxContainer" parent="SetupPanel/HeaderMargin"]
layout_mode = 2

[node name="SetupLabel" type="Label" parent="SetupPanel/HeaderMargin/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 36
text = "SETUP"

[node name="CloseButton" type="Button" parent="SetupPanel/HeaderMargin/HeaderHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "CLOSE"

[node name="ControlsMargin" type="MarginContainer" parent="SetupPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -110.0
offset_right = 93.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 60

[node name="ControlsVBox" type="VBoxContainer" parent="SetupPanel/ControlsMargin"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="StartHBox" type="HBoxContainer" parent="SetupPanel/ControlsMargin/ControlsVBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="StartLabel" type="Label" parent="SetupPanel/ControlsMargin/ControlsVBox/StartHBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "START"

[node name="StartSpinBox" type="SpinBox" parent="SetupPanel/ControlsMargin/ControlsVBox/StartHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 2200.0
value = 1.0
rounded = true

[node name="EndHBox" type="HBoxContainer" parent="SetupPanel/ControlsMargin/ControlsVBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="EndLabel" type="Label" parent="SetupPanel/ControlsMargin/ControlsVBox/EndHBox"]
layout_mode = 2
text = "END"

[node name="EndSpinBox" type="SpinBox" parent="SetupPanel/ControlsMargin/ControlsVBox/EndHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 2200.0
max_value = 2200.0
value = 2200.0
rounded = true

[node name="QuestionsHBox" type="HBoxContainer" parent="SetupPanel/ControlsMargin/ControlsVBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="QuestionsLabel" type="Label" parent="SetupPanel/ControlsMargin/ControlsVBox/QuestionsHBox"]
layout_mode = 2
text = "QUESTIONS"

[node name="QuestionsSpinBox" type="SpinBox" parent="SetupPanel/ControlsMargin/ControlsVBox/QuestionsHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 2200.0
value = 100.0
rounded = true

[node name="StartButton" type="Button" parent="SetupPanel/ControlsMargin/ControlsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "START"
